--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 </header>
 <nav> 
 <ul>
-    <h2><p>"WDD 230 - Assignment Portal."</p></h2>
-    <li><p align="center">Lesson 2: <a href=>Assignment Link</a></p></li>
-    <li><p align="center">Lesson 3: <a href=>Assignment Link</a></p></li>
-    <li><p align="center">Lesson 4: <a href=>Link</a> | <a href=>Link</a></p></li>
+    <h2><p>WDD 230 - Assignment Portal</p></h2>
+    <li><p>Lesson 2: <a href=>Assignment Link</a></p></li>
+    <li><p>Lesson 3: <a href=>Assignment Link</a></p></li>
+    <li><p>Lesson 4: <a href=>Link</a> | <a href=>Link</a></p></li>
 
     </ul>
 </nav>
