--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>WDD 230 Assignment Portal | Logan M. Pierce |BYU-Idaho</title>
 <meta name="description" content="Assignment portal page for Logan Pierce in WDD 230: Web Frontend Development at BYU-Idaho.">
-<link rel="stylesheet" href="css/main.css">
+<link rel="stylesheet" href="css/small.css">
+<link rel="stylesheet" href="css/medium.css">
 </head>
     
 <body>
