--- a/index.html
+++ b/index.html
@@ -38,5 +38,5 @@
     </p>
     </footer>
     </body>
-    <script src='js/main.js'></script>
+    <script src="../js/main.js"></script>
     </html>
