--- a/index.html
+++ b/index.html
@@ -38,5 +38,5 @@
     </p>
     </footer>
     </body>
-    <script src="../js/main.js"></script>
+    <script src="../Tienut73.github.io/js/main.js"></script>
     </html>
