--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 <link rel="stylesheet" href="css/large.css">
 </head>
     
-<body>
+    <body data-gr-c-s-loaded="true">
     <header>
+    <img src="../Tienut73.github.io/images/loganphoto.jpg" alt="My Profile Picture">  
     <h1>Logan M. Pierce</h1>
-    <img src="images/loganphoto.jpg" alt="My Profile Picture">  
     </header>
     <main>
     <h2>WDD 230 - Assignment Portal</h2>
